// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pager PageInput onKeyUpHandle page size input is inputted - key code is not 13 - do nothing 1`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev "
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={3}
    />
    <span>
       of 3
       
    </span>
  </div>
  <a
    className="icon page-next disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 11-15 of 15
  </span>
</div>
`;

exports[`Pager PageInput onKeyUpHandle page size input is inputted - key code is not 13 - do nothing 2`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev "
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={3}
    />
    <span>
       of 3
       
    </span>
  </div>
  <a
    className="icon page-next disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 11-15 of 15
  </span>
</div>
`;

exports[`Pager PageInput onKeyUpHandle page size input is is inputted - key code is 13 - call onPaging 1`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={1}
    />
    <span>
       of 3
       
    </span>
  </div>
  <a
    className="icon page-next "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 1-5 of 15
  </span>
</div>
`;

exports[`Pager PageInput onKeyUpHandle page size input is is inputted - key code is 13 - call onPaging 2`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={1}
    />
    <span>
       of 3
       
    </span>
  </div>
  <a
    className="icon page-next "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 1-5 of 15
  </span>
</div>
`;

exports[`Pager PageInput onKeyUpHandle page size input is is inputted - key code is 13 - index is larger than total page - do notthing 1`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={5}
    />
    <span>
       of 3
       
    </span>
  </div>
  <a
    className="icon page-next disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 21-15 of 15
  </span>
</div>
`;

exports[`Pager PageInput onKeyUpHandle page size input is is inputted - key code is 13 - index is larger than total page - do notthing 2`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={5}
    />
    <span>
       of 3
       
    </span>
  </div>
  <a
    className="icon page-next disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 21-15 of 15
  </span>
</div>
`;

exports[`Pager PageInput page size input is changed - value is not a number - disable page icons and page size selection 1`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value=""
    />
    <span>
       of 3
       
    </span>
  </div>
  <a
    className="icon page-next disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={true}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 11-15 of 15
  </span>
</div>
`;

exports[`Pager goToPage page icon is clicked - call onPaging 1`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev "
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={2}
    />
    <span>
       of 3
       
    </span>
  </div>
  <a
    className="icon page-next "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 6-10 of 15
  </span>
</div>
`;

exports[`Pager goToPage page icon is clicked - call onPaging 2`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev "
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={2}
    />
    <span>
       of 3
       
    </span>
  </div>
  <a
    className="icon page-next "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 6-10 of 15
  </span>
</div>
`;

exports[`Pager goToPage page icon is clicked - call onPaging 3`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev "
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={2}
    />
    <span>
       of 3
       
    </span>
  </div>
  <a
    className="icon page-next "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 6-10 of 15
  </span>
</div>
`;

exports[`Pager goToPage page icon is clicked - call onPaging 4`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev "
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={2}
    />
    <span>
       of 3
       
    </span>
  </div>
  <a
    className="icon page-next "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 6-10 of 15
  </span>
</div>
`;

exports[`Pager goToPage page icon is clicked - call onPaging 5`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev "
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={2}
    />
    <span>
       of 3
       
    </span>
  </div>
  <a
    className="icon page-next "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 6-10 of 15
  </span>
</div>
`;

exports[`Pager goToPage page index is invalid - do not call onPaging with new input 1`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={1}
    />
    <span>
       of 3
       
    </span>
  </div>
  <a
    className="icon page-next "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 1-5 of 15
  </span>
</div>
`;

exports[`Pager goToPage page index is invalid - do not call onPaging with new input 2`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={1}
    />
    <span>
       of 3
       
    </span>
  </div>
  <a
    className="icon page-next "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 1-5 of 15
  </span>
</div>
`;

exports[`Pager goToPage page size selection is changed - call onPaging 1`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={1}
    />
    <span>
       of 3
       
    </span>
  </div>
  <a
    className="icon page-next "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 1-5 of 15
  </span>
</div>
`;

exports[`Pager goToPage page size selection is changed - call onPaging 2`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={1}
    />
    <span>
       of 3
       
    </span>
  </div>
  <a
    className="icon page-next "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 1-5 of 15
  </span>
</div>
`;

exports[`Pager render _renderPageIcon - first page icon - disable icon if PageIndex is 1 1`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={1}
    />
    <span>
       of 2
       
    </span>
  </div>
  <a
    className="icon page-next "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 1-5 of 10
  </span>
</div>
`;

exports[`Pager render _renderPageIcon - first page icon - disable icon if PageIndex is not 1 1`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev "
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={2}
    />
    <span>
       of 2
       
    </span>
  </div>
  <a
    className="icon page-next disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 6-10 of 10
  </span>
</div>
`;

exports[`Pager render _renderPageIcon - last page icon - disable icon if PageIndex is not the last 1`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev "
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={2}
    />
    <span>
       of 3
       
    </span>
  </div>
  <a
    className="icon page-next "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 6-10 of 15
  </span>
</div>
`;

exports[`Pager render _renderPageIcon - last page icon - disable icon if PageIndex is the last 1`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev "
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={3}
    />
    <span>
       of 3
       
    </span>
  </div>
  <a
    className="icon page-next disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 11-15 of 15
  </span>
</div>
`;

exports[`Pager render _renderPageIcon - next page icon - disable icon if PageIndex is not the last 1`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev "
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={2}
    />
    <span>
       of 3
       
    </span>
  </div>
  <a
    className="icon page-next "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 6-10 of 15
  </span>
</div>
`;

exports[`Pager render _renderPageIcon - next page icon - disable icon if PageIndex is the last 1`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev "
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={3}
    />
    <span>
       of 3
       
    </span>
  </div>
  <a
    className="icon page-next disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 11-15 of 15
  </span>
</div>
`;

exports[`Pager render _renderPageIcon - previous page icon - disable icon if PageIndex is 1 1`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={1}
    />
    <span>
       of 2
       
    </span>
  </div>
  <a
    className="icon page-next "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 1-5 of 10
  </span>
</div>
`;

exports[`Pager render _renderPageIcon - previous page icon - disable icon if PageIndex is not 1 1`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev "
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={2}
    />
    <span>
       of 2
       
    </span>
  </div>
  <a
    className="icon page-next disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 6-10 of 10
  </span>
</div>
`;

exports[`Pager render _renderPageInfo - page info is rendered if isShowPagingInfo is true 1`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={1}
    />
    <span>
       of 2
       
    </span>
  </div>
  <a
    className="icon page-next "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 1-5 of 10
  </span>
</div>
`;

exports[`Pager render _renderPageInput - page input is rendered if isAllowInputPageIndex is true 1`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={1}
    />
    <span>
       of 2
       
    </span>
  </div>
  <a
    className="icon page-next "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 1-5 of 10
  </span>
</div>
`;

exports[`Pager render _renderPageLabel - page lable is rendered if isAllowInputPageIndex is false 1`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
      1 of 2 
    </span>
  </div>
  <a
    className="icon page-next "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 1-5 of 10
  </span>
</div>
`;

exports[`Pager render component is hidden if paging is not available 1`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "none",
    }
  }
>
  <a
    className="icon page-first disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={1}
    />
    <span>
       of 1
       
    </span>
  </div>
  <a
    className="icon page-next disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 1-1 of 1
  </span>
</div>
`;

exports[`Pager render component is rendered correctly 1`] = `
<div
  className="page-container center-align"
  style={
    Object {
      "display": "block",
    }
  }
>
  <a
    className="icon page-first disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-prev disable"
    href="javascript:;"
    onClick={[Function]}
  />
  <div
    className="page-input"
  >
    <span>
      Page 
    </span>
    <input
      className="page-form"
      maxLength="4"
      onChange={[Function]}
      onKeyUp={[Function]}
      size="2"
      type="text"
      value={1}
    />
    <span>
       of 2
       
    </span>
  </div>
  <a
    className="icon page-next "
    href="javascript:;"
    onClick={[Function]}
  />
  <a
    className="icon page-last "
    href="javascript:;"
    onClick={[Function]}
  />
  <select
    className="pagesize-select"
    disabled={false}
    onChange={[Function]}
    value={5}
  >
    <option
      value={5}
    >
      5
    </option>
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
  </select>
  <span
    className="page-info"
  >
    View 1-5 of 10
  </span>
</div>
`;
